// Code generated by github.com/tinkler/mqttadmin; DO NOT EDIT.
syntax = "proto3";
option go_package = "github.com/tinkler/clancloud/auth/v1;auth_v1";
option java_multiple_files = true;
option java_package = "ink.sfs.tinkler.mqttadmin.auth.v1";
option java_outer_classname = "authProto";
package auth.v1;
import "google/protobuf/any.proto";

message User {
	string id = 1;
	string username = 2;
	string nickname = 3;
	string avatar_url = 4;
	int64 member_id = 5;
}

message UserManager {
	string ver = 1;
}

service AuthGsrv {
	rpc UserManagerAllUser (stream google.protobuf.Any) returns (stream google.protobuf.Any);
}
